monolithic-objects/src/main/java/com/ttulka/blog/samples/good/GoodApplication.java
package com.ttulka.blog.samples.good;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
class GoodApplication {

    public static void main(String[] args) {
        SpringApplication.run(GoodApplication.class, args);
    }
}
