monolithic-objects/src/main/java/com/ttulka/blog/samples/bad/BadApplication.java
package com.ttulka.blog.samples.bad;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
class BadApplication {

    public static void main(String[] args) {
        SpringApplication.run(BadApplication.class, args);
    }
}
